[gd_scene load_steps=4 format=3 uid="uid://bxe7b01syvr2g"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_6rlb3"]
[ext_resource type="Texture2D" uid="uid://cs3f2ura47btr" path="res://graphics/UI/TickBox.png" id="2_xk3su"]
[ext_resource type="PackedScene" uid="uid://bq0yw7k0md7gw" path="res://scenes/game_rules.tscn" id="2_y7a0p"]

[node name="Game_Rules_Button" type="CanvasLayer"]
script = ExtResource("1_6rlb3")

[node name="GameRules" parent="." instance=ExtResource("2_y7a0p")]
visible = false

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 512.0
offset_top = 29.0
offset_right = 542.0
offset_bottom = 53.0
texture_normal = ExtResource("2_xk3su")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 521.0
offset_top = 35.0
offset_right = 535.0
offset_bottom = 66.0
scale = Vector2(0.9, 0.4)
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_font_sizes/font_size = 20
text = "R"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
